--- a/style.css
+++ b/style.css
@@ -48,3 +48,29 @@ body {
     font-size: 3em;
     padding: 20px;
 }
+
+.star {
+    position: absolute;
+    top: 0px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.starSmall {
+    left: 300px;
+    width: 3px;
+    height: 3px;
+    background-color: gray;
+}
+
+.starMedium {
+    left: 400px;
+    width: 4px;
+    height: 4px;
+}
+
+.starBig {
+    left: 100px;
+    width: 5px;
+    height: 5px;
+}
